--- a/.github/workflows/merge-group.yml
+++ b/.github/workflows/merge-group.yml
@@ -14,10 +14,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -31,10 +28,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -45,10 +39,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - name: Install dependencies
               run: npm ci
@@ -60,21 +51,13 @@ jobs:
               run: npm run ci:typecheck
 
     test:
-        name: Test (Node ${{ matrix.node-version }})
+        name: Test
         runs-on: ubuntu-latest
         timeout-minutes: 10
-        strategy:
-            matrix:
-                node-version: [20.x, 22.x]
-            # Don't cancel other matrix jobs if one fails
-            fail-fast: false
 
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -85,11 +68,7 @@ jobs:
         timeout-minutes: 10
         steps:
             - uses: actions/checkout@v6
-
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -107,10 +86,7 @@ jobs:
         timeout-minutes: 10
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -131,11 +107,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v6
-
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
