--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,15 +6,15 @@ on:
       - main
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  install-and-build:
+  build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v6
       - uses: jdx/mise-action@v3
 
-      - run: just install-ci
       - run: just build-ci
