Simplify auto-fix commit messages in workflow.

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -176,7 +176,7 @@ jobs:
                     git switch --create $FIX_BRANCH
 
                     git add --all
-                    git commit --message "Auto-fix: Apply Biome lint fixes"
+                    git commit --message "Apply Biome lint fixes."
                     git push --force origin $FIX_BRANCH
 
                     echo "Biome lint fixes have been pushed to the $FIX_BRANCH branch."
@@ -214,7 +214,7 @@ jobs:
                     git switch --create $FIX_BRANCH
 
                     git add --all
-                    git commit --message "Auto-fix: Apply Biome formatting"
+                    git commit --message "Apply Biome formatting."
                     git push --force origin $FIX_BRANCH
 
                     echo "Biome formatting fixes have been pushed to the $FIX_BRANCH branch."
@@ -252,7 +252,7 @@ jobs:
                     git switch --create $FIX_BRANCH
 
                     git add --all
-                    git commit --message "Auto-fix: Apply Prettier formatting"
+                    git commit --message "Apply Prettier formatting."
                     git push --force origin $FIX_BRANCH
 
                     echo "Prettier fixes have been pushed to the $FIX_BRANCH branch."
