--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
 		"@cloudflare/workers-types": "^4.20251224.0",
+		"prettier": "^3.7.4",
 		"@playwright/test": "^1.57.0",
 		"@tanstack/eslint-plugin-router": "^1.141.0",
 		"@tanstack/react-router-devtools": "^1.143.4",
