--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"zod": "^4.2.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.10",
+		"@biomejs/biome": "2.3.10",
 		"@cloudflare/workers-types": "^4.20251224.0",
 		"prettier": "^3.7.4",
 		"@playwright/test": "^1.57.0",
