--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
       hooks:
           - id: biome
             name: biome
-            entry: npx biome format --write
+            entry: npx biome check --write
             language: system
             types: [file]
             files: \.(js|jsx|ts|tsx|mjs|cjs|json|json5)$
@@ -35,11 +35,4 @@ repos:
             name: prettier
             entry: npx prettier --write
             language: system
-            types_or: [yaml, markdown, html]
-
-          - id: eslint
-            name: eslint
-            entry: npx eslint --fix
-            language: system
-            files: \.(js|jsx|ts|tsx|mjs|cjs)$
-            types: [file]
+            types_or: [yaml, markdown, css, html]
