Add pre-commit hook to run biome migrate and keep schema in sync.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,13 @@ repos:
 
     - repo: local
       hooks:
+          - id: biome-migrate
+            name: biome migrate
+            entry: npx biome migrate --write
+            language: system
+            pass_filenames: false
+            files: biome\.jsonc?$
+
           - id: biome
             name: biome
             entry: npx biome check --write
