Enable stricter Biome lint rules.
- noDebugger: warn → error
- noEmptyBlockStatements: off → error
- noExplicitAny: off → error
- noNonNullAssertion: off → error

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -94,7 +94,7 @@
 				"useTemplate": "error",
 				"useNodejsImportProtocol": "off",
 				"noUselessElse": "off",
-				"noNonNullAssertion": "off",
+				"noNonNullAssertion": "error",
 				"noDescendingSpecificity": "error",
 				"noParameterAssign": "error",
 				"useAsConstAssertion": "error",
@@ -112,14 +112,14 @@
 				"noClassAssign": "error",
 				"noCompareNegZero": "error",
 				"noControlCharactersInRegex": "error",
-				"noDebugger": "warn",
+				"noDebugger": "error",
 				"noDoubleEquals": "error",
 				"noDuplicateCase": "error",
 				"noDuplicateClassMembers": "error",
 				"noDuplicateObjectKeys": "error",
 				"noDuplicateParameters": "error",
-				"noEmptyBlockStatements": "off",
-				"noExplicitAny": "off",
+				"noEmptyBlockStatements": "error",
+				"noExplicitAny": "error",
 				"noExtraNonNullAssertion": "error",
 				"noFallthroughSwitchClause": "error",
 				"noFunctionAssign": "error",
