Enable noShadow rule and fix variable shadowing throughout codebase.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -106,7 +106,8 @@
 				"noInferrableTypes": "error"
 			},
 			"nursery": {
-				"noLeakedRender": "error"
+				"noLeakedRender": "error",
+				"noShadow": "error"
 			},
 			"suspicious": {
 				"noAsyncPromiseExecutor": "error",
