Enable useSimplifiedLogicExpression lint rule and simplify boolean expressions.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -53,7 +53,8 @@
 				"noStaticOnlyClass": "error",
 				"noThisInStatic": "error",
 				"useDateNow": "error",
-				"noImportantStyles": "error"
+				"noImportantStyles": "error",
+				"useSimplifiedLogicExpression": "error"
 			},
 			"correctness": {
 				"noConstAssign": "error",
