Remove barrel files and update imports to source modules.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -87,7 +87,8 @@
 				"useUniqueElementIds": "error"
 			},
 			"performance": {
-				"noDelete": "off"
+				"noDelete": "off",
+				"noBarrelFile": "error"
 			},
 			"style": {
 				"useConst": "error",
