Enable useTopLevelRegex rule and hoist regex literals to module level.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -89,7 +89,8 @@
 			"performance": {
 				"noDelete": "off",
 				"noBarrelFile": "error",
-				"noReExportAll": "error"
+				"noReExportAll": "error",
+				"useTopLevelRegex": "error"
 			},
 			"style": {
 				"useConst": "error",
