--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -260,3 +260,42 @@ jobs:
                   else
                     echo "No changes needed by Prettier"
                   fi
+
+    pre-commit-fix:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+            pull-requests: write
+        steps:
+            - uses: actions/checkout@v6
+              with:
+                  ref: ${{ github.event.pull_request.head.ref }}
+                  repository: ${{ github.event.pull_request.head.repo.full_name }}
+                  token: ${{ secrets.GITHUB_TOKEN }}
+
+            - uses: jdx/mise-action@v3
+
+            - name: Configure Git
+              run: |
+                  git config --global user.name "GitHub Actions"
+                  git config --global user.email "github-actions@github.com"
+
+            - name: Run pre-commit Fix
+              run: |
+                  npm ci
+                  npx @tanstack/router-cli generate --routesDirectory ./src/routes --generatedRouteTree ./src/routeTree.gen.ts
+                  pre-commit run --all-files || true
+
+                  if [[ -n $(git status --porcelain) ]]; then
+                    FIX_BRANCH="fix-${{ github.event.pull_request.number }}-pre-commit"
+                    git switch --create $FIX_BRANCH
+
+                    git add --all
+                    git commit --message "Apply pre-commit fixes."
+                    git push --force origin $FIX_BRANCH
+
+                    echo "Pre-commit fixes have been pushed to the $FIX_BRANCH branch."
+                    exit 1
+                  else
+                    echo "No changes needed by pre-commit"
+                  fi
